-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11.0.14-oracle, 12
-
Component/s: hotspot
-
b13
-
Verified
Test TestEagerReclaimHumongousRegionsClearMarkBits might fail with
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/share/gc/g1/g1ConcurrentMarkThread.cpp:385
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:/workspace/open/src/hotspot/share/gc/g1/g1ConcurrentMarkThread.cpp:385), pid=69516, tid=60924
# assert(!G1VerifyBitmaps || _cm->next_mark_bitmap_is_clear()) failed: Next mark bitmap must be clear
#
# JRE version: Java(TM) SE Runtime Environment (12.0+10) (fastdebug build 12-ea+10)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-ea+10, mixed mode, tiered, compressed oops, g1 gc, windows-amd64)
# Core dump will be written. Default location: T:\\testoutput\\jtreg\\JTwork\\scratch\\0\\hs_err_pid69516.mdmp
#
# An error report file with more information is saved as:
# T:\\testoutput\\jtreg\\JTwork\\scratch\\0\\hs_err_pid69516.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
[32.733s][info][gc] GC(124) Pause Full (G1 Evacuation Pause) 128M->28M(128M) 233.705ms
[32.908s][info][gc] GC(126) Pause Young (Normal) (G1 Evacuation Pause) 30M->30M(128M) 106.408ms
[33.017s][info][gc] GC(127) Pause Young (Normal) (G1 Evacuation Pause) 31M->31M(128M) 105.130ms
[34.704s][info][gc] GC(128) Pause Young (Normal) (G1 Evacuation Pause) 32M->32M(128M) 1679.785ms
Failure is very intermittent. Failed less then 0.5% times but I seen it twice for JDK 12 b10 testing.
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/share/gc/g1/g1ConcurrentMarkThread.cpp:385
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:/workspace/open/src/hotspot/share/gc/g1/g1ConcurrentMarkThread.cpp:385), pid=69516, tid=60924
# assert(!G1VerifyBitmaps || _cm->next_mark_bitmap_is_clear()) failed: Next mark bitmap must be clear
#
# JRE version: Java(TM) SE Runtime Environment (12.0+10) (fastdebug build 12-ea+10)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-ea+10, mixed mode, tiered, compressed oops, g1 gc, windows-amd64)
# Core dump will be written. Default location: T:\\testoutput\\jtreg\\JTwork\\scratch\\0\\hs_err_pid69516.mdmp
#
# An error report file with more information is saved as:
# T:\\testoutput\\jtreg\\JTwork\\scratch\\0\\hs_err_pid69516.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
[32.733s][info][gc] GC(124) Pause Full (G1 Evacuation Pause) 128M->28M(128M) 233.705ms
[32.908s][info][gc] GC(126) Pause Young (Normal) (G1 Evacuation Pause) 30M->30M(128M) 106.408ms
[33.017s][info][gc] GC(127) Pause Young (Normal) (G1 Evacuation Pause) 31M->31M(128M) 105.130ms
[34.704s][info][gc] GC(128) Pause Young (Normal) (G1 Evacuation Pause) 32M->32M(128M) 1679.785ms
Failure is very intermittent. Failed less then 0.5% times but I seen it twice for JDK 12 b10 testing.
- relates to
-
JDK-8054808 Bitmap verification sometimes fails after Full GC aborts concurrent marking
-
- Resolved
-