8210557: G1 next bitmap verification at the end of concurrent mark sometimes fails

Removed unnecessary verification that can cause spurious false alarm.

Reviewed-by: sjohanss, kbarrett